# fmp-machine-learning

./: CHANGELOG.md  README.md  accuracy_log.txt  fmp-machine-learning.cabal  plot_live.py
app/: Main.hs
data/: daten.csv  example1.csv  exampleTesting.csv  exampleTesting2.csv  exampleTesting3.csv  exampleTesting4.csv  exampleTraining.csv  exampleTraining2.csv  exampleTraining3.csv  exampleTraining4.csv
src/: Attribute.hs  Constraint.hs  Data.hs  Decision.hs  Object.hs  Reader.hs  Stream.hs  Tree.hs  VFDT.hs  decision.hs  reader.hs  tree.hs
