cabal-version:      3.0
name:               fmp-machine-learning
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Tim Wagner
maintainer:         tim.wagner@st.oth-regensburg.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable fmp-machine-learning
    import:           warnings
    main-is:          Main.hs
    other-modules:    
        Reader
        Tree
        Decision
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   
        app
        src
    default-language: GHC2021
